<resources>
    <string name="app_name">NoteYard</string>
    <string name="quote">A Simple Note Taking App ...</string>
    <string name="notes">Notes</string>
    <string name="welcome">Welcome!</string>
    <string name="create_account_get_started"><![CDATA[Create account & get started]]></string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="login">Login</string>
    <string name="add_new_note">Add New Note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="delete_note">Delete note</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="signin_get_started"><![CDATA[Sign in & get started..]]></string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="logo">logo</string>
    <string name="create_note">create note</string>
    <string name="menu_button">menu button</string>
    <string name="save_note">save note</string>
    <string name="note_title">note title</string>
    <string name="this_can_be_note_content_that_can_be_long">this can be note content that can be long</string>
    <string name="menu_item_search">Search your notes here...</string>
    <string name="item_acciunt">Account</string>
    <string name="item_account">Account</string>
    <string name="edit_your_note">Edit your Note</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="the_signed_user_is">The signed user (email) is:</string>
    <string name="developed_by">Developed by Saunak Shrestha</string>
    <string name="saunak_shrestha">Saunak Shrestha</string>
    <string name="NoteTakingApp">Note Taking App</string>
    <string name="Note_has_been_deleted">Note has been deleted</string>
    <string name="Note_added_successfully">Note added successfully</string>
    <string name="save">save</string>
</resources>