<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SplashActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/logo"
        android:layout_marginVertical="5dp"
        android:contentDescription="@string/logo"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/bluish"
        android:gravity="center"
        android:textStyle="bold"


        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quote"
        android:textSize="14sp"
        android:textColor="@color/bluish"
        android:fontFamily="@font/comfort_bold"
        android:gravity="center"
        android:textStyle="italic"

        />

    <ProgressBar
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:indeterminateTint="@color/bluish"
        android:layout_margin="16dp"/>






</LinearLayout>