<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32dp"
    android:layout_marginVertical="16dp"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="32dp"
        android:id="@+id/login_icon"
        android:src="@drawable/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icon"
        android:id="@+id/hello_text"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textStyle="bold"
            android:textSize="32sp"
            android:fontFamily="@font/sacramento"
            android:paddingBottom="4dp"
            android:textColor="@color/bluish"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_get_started"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/comfort_regular"
            android:textColor="@color/bluish"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form_layout"
        android:layout_below="@id/hello_text"
        android:layout_marginVertical="32dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_edit_text"
            android:inputType="textEmailAddress"
            android:hint="Email Id"
            android:fontFamily="@font/comfort_regular"
            android:textSize="16sp"
            android:background="@drawable/rounded_corner"
            android:padding="14dp"
            android:layout_marginTop="12dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="16sp"
            android:background="@drawable/rounded_corner"
            android:padding="14dp"
            android:fontFamily="@font/comfort_regular"
            android:layout_marginTop="12dp"
            />


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/login_btn"
            android:layout_height="64dp"
            android:backgroundTint="@color/bluish"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/comfort_regular"

            />

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_layout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/bluish"
            android:fontFamily="@font/poppins_regular"

            android:text="@string/don_t_have_an_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/bluish"
            android:fontFamily="@font/poppins_regular"
            android:id="@+id/create_account_text_view_btn"
            android:text="@string/create_account"/>

    </LinearLayout>

</RelativeLayout>