<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary"
    android:padding="16dp"
    tools:context=".NoteDetailsActivity">

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/add_new_note"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/delete_note_text_view_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:background="@drawable/rounded_corner"

            android:backgroundTint="@color/theme"
            android:drawableTint="@color/white"
            android:fontFamily="@font/poppins_regular"

            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/white"

            android:visibility="gone"
            app:drawableStartCompat="@drawable/baseline_delete_24" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar_layout"
        android:layout_marginVertical="26dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/notes_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/title"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/notes_content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="top"
            android:hint="@string/content"
            android:minLines="15"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/save_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
       android:gravity="center"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/theme"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:text="@string/save"
        android:fontFamily="@font/comfort_regular"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:drawableLeftCompat="@drawable/baseline_save_24"
        app:drawableTint="@color/white" />


</RelativeLayout>